<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Villain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="player_name"> p_name </string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hero_name_prompt">Hero Name</string>
    <string name="button_input_name">For Science!</string>
    <string name="player_action"> chose </string>
    <string name="player_choice"> n/a </string>

</resources>
